Fix for aligned headers of TabbedContent shrinking on horizontal heading.

--- a/components/TabbedContent/TabbedContent.css
+++ b/components/TabbedContent/TabbedContent.css
@@ -81,7 +81,8 @@
 }
 
 .headingVAlign{
-    flex: 0;
+    flex-grow: 0;
+    flex-basis: auto;
 } 
 
 /* .headerAlign span.title{
